objects/AIA_Workflow_Emails__c.object
<CustomObject>
    <fields>
        <fullName>AIA_BRF_Zip_Code_Validation__c</fullName>
        <defaultValue>"networkaccess@carefirst.com"</defaultValue>
        <description>Used to send email to RFP team when a new BRF is created under an Opportunity with VA jurisdiction for Zip Code Validation.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Used to send email to RFP team when a new BRF is created under an Opportunity with VA jurisdiction for Zip Code Validation.</inlineHelpText>
        <label>AIA BRF Zip Code Validation</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AIA_OP4_Email_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AIA OP4 Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ARC_Approval_Request_BCM_Email__c</fullName>
        <description>ARC Approval will use this email address to notify BCM that an approval is pending.  Set to a value such as 'BCMARCApprovalRequests@carefirst.com'.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>ARC Approval will use this email address to notify BCM that an approval is pending.  Set to a value such as 'BCMARCApprovalRequests@carefirst.com'.</inlineHelpText>
        <label>ARC Approval Request: BCM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Benefit_Admin_Account_Set_Up_team__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Benefit Admin Account Set Up team</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_To_MAST_team__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email To MAST team</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>QA_Auditor__c</fullName>
        <description>This is to hold a group email address as " NAEGS.Audit@carefirst.com" as part of approval process 'AIA Benefit Design Approval_7' which will send a notification for the BD approval</description>
        <encryptionScheme>None</encryptionScheme>
        <label>QA Auditor</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Stop_Loss_Notification_Email_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Stop Loss Notification : Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Stop_Loss_Notification_Email_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Stop Loss Notification : Email 2</label>
        <type>Email</type>
    </fields>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This custom setting holds the emails to be added to email alerts in workflow rules</description>
    <label>AIA Workflow Emails</label>
</CustomObject>